include/dsspm_capi.h

    
    /*
    Description of the property.
    */
    DSSPM_CAPI_DLL char* DSSProperty_Get_Description(void);
    
    /*
    Name of Property
    */
    DSSPM_CAPI_DLL char* DSSProperty_Get_Name(void);
    
    DSSPM_CAPI_DLL char* DSSProperty_Get_Val(void);
    
    DSSPM_CAPI_DLL void DSSProperty_Set_Val(char* Value);
    DSSPM_CAPI_DLL void DSSProperty_Set_Name(char* Value);
    DSSPM_CAPI_DLL void DSSProperty_Set_Index(int32_t Value);